--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <script>
     // ====================================================================
     // !!! PENTING: GANTI INI DENGAN URL DEPLOYMENT GOOGLE APPS SCRIPT ANDA !!!
-    const API_URL = "https://script.google.com/macros/s/AKfycbyCiqAeG8kvLhzhOWYHAiK_aIrEjBHOVhXnwWAYvVj7M8YwAbT5xRNB1tMaieme8_raOw/exec"; 
+    const API_URL = "https://script.google.com/macros/s/AKfycbzdBFfZ2KAgVeJVQ9S6k7K8APgeIymSa5rgcS5d6YAYTTKNdGvmFviX9GwkamB9pev79g/exec"; 
     // ====================================================================
 
     let currentUniqueID = null; 
@@ -398,18 +398,18 @@
                     <td data-label="Kegiatan / Brand" class="p-2 text-xs">${header.kegiatan}<br><span class="text-indigo-600 font-semibold">${header.inputBrand}</span></td>
                     <td data-label="Grand Total" class="p-2 text-right font-bold text-green-700">${formatRibuan(header.grandTotal)}</td>
                     <td data-label="Status" class="p-2">
-			    <span class="inline-block px-2 py-1 text-xs font-semibold rounded-full ${
-				header.status === 'Done' 
-				? 'bg-green-100 text-green-800' // Hijau untuk Done
-				: header.status === 'Pengajuan' 
-				? 'bg-blue-100 text-blue-800' // Biru untuk Pengajuan
-				: header.status === 'Kendala' 
-				? 'bg-red-100 text-red-800' // Merah untuk Kendala
-				: 'bg-yellow-100 text-yellow-800' // Kuning untuk Pending/Default
-			    }">
-				${header.status}
-			    </span>
-			</td>
+                        <span class="inline-block px-2 py-1 text-xs font-semibold rounded-full ${
+                            header.status === 'Done' 
+                            ? 'bg-green-100 text-green-800' // Hijau untuk Done
+                            : header.status === 'Pengajuan' 
+                            ? 'bg-blue-100 text-blue-800' // Biru untuk Pengajuan
+                            : header.status === 'Kendala' 
+                            ? 'bg-red-100 text-red-800' // Merah untuk Kendala
+                            : 'bg-yellow-100 text-yellow-800' // Kuning untuk Pending/Default
+                        }">
+                        ${header.status}
+                        </span>
+                    </td>
                     <td data-label="Aksi" class="p-2 text-center">
                         <button onclick="loadRekapDetails('${header.uniqueID}')" class="px-3 py-1 bg-indigo-500 text-white text-xs rounded hover:bg-indigo-600">Detail</button>
                     </td>
@@ -452,12 +452,12 @@
                  body.innerHTML = '<tr><td colspan="5" class="p-4 text-center text-gray-500">Tidak ada item ditemukan.</td></tr>';
                  const table = document.getElementById("detailTable");
                  table.insertAdjacentHTML('beforeend', `<tfoot id="detailFooter">
-                    <tr class="bg-gray-200 font-bold">
-                        <td colspan="3" class="p-2 text-right">GRAND TOTAL</td>
-                        <td data-label="Total" class="p-2 text-right text-green-700">${formatRibuan(0)}</td>
-                        <td data-label="Aksi" class="p-2"></td>
-                    </tr>
-                   </tfoot>`);
+                     <tr class="bg-gray-200 font-bold">
+                         <td colspan="3" class="p-2 text-right">GRAND TOTAL</td>
+                         <td data-label="Total" class="p-2 text-right text-green-700">${formatRibuan(0)}</td>
+                         <td data-label="Aksi" class="p-2"></td>
+                     </tr>
+                    </tfoot>`);
                  return;
             }
 
@@ -524,6 +524,7 @@
         try {
             const res = await fetch(API_URL + "?action=updateItem", {
                 method: "POST",
+                // PERBAIKAN: Gunakan application/json agar Apps Script dapat memproses data
                 headers: { 'Content-Type': 'text/plain' }, 
                 body: JSON.stringify({
                     rowIndex: rowIndex,
@@ -559,8 +560,8 @@
         const jumlah = parseFloat(document.getElementById('addItemJumlah').value);
         
         // Ambil data baru dari hidden field
-        const kode = document.getElementById('addItemKode').value;   // BARU
-        const stok = parseFloat(document.getElementById('addItemStok').value);    // BARU
+        const kode = document.getElementById('addItemKode').value;    // BARU
+        const stok = parseFloat(document.getElementById('addItemStok').value);     // BARU
         const harga = parseFloat(document.getElementById('addItemHargaRaw').value);
         const total = parseNumber(document.getElementById('addItemTotal').value); // Total diambil dari input display lalu di-parse
 
@@ -570,6 +571,13 @@
             btn.disabled = false;
             return;
         }
+    
+    if (!uniqueID) {
+        showError("ID Transaksi tidak ditemukan. Muat ulang detail terlebih dahulu.");
+        btn.innerHTML = oldLabel;
+        btn.disabled = false;
+        return;
+    }
 
         try {
             const res = await fetch(API_URL + "?action=addItemToRekap", {
@@ -579,8 +587,8 @@
                     uniqueID: uniqueID,
                     nama: nama,
                     jumlah: jumlah,
-                    kode: kode,     // KIRIM KODE
-                    stok: stok,     // KIRIM STOK
+                    kode: kode,      // KIRIM KODE
+                    stok: stok,      // KIRIM STOK
                     harga: harga,
                     total: total
                 })
@@ -609,6 +617,7 @@
         try {
             const res = await fetch(API_URL + "?action=deleteItem", {
                 method: "POST",
+                // PERBAIKAN: Gunakan application/json agar Apps Script dapat memproses data
                 headers: { 'Content-Type': 'text/plain' }, 
                 body: JSON.stringify({ rowIndex: rowIndex })
             });
